--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	</parent>
 	<groupId>com.esotericsoftware.kryo</groupId>
 	<artifactId>kryo</artifactId>
-	<version>2.24.0</version>
+	<version>2.24.0-blue</version>
 	<packaging>bundle</packaging>
 	<name>Kryo</name>
 	<description>Fast, efficient Java serialization</description>
@@ -43,7 +43,7 @@
 		<dependency>
 			<groupId>com.esotericsoftware.reflectasm</groupId>
 			<artifactId>reflectasm</artifactId>
-			<version>1.09</version>
+			<version>1.09-blue</version>
 			<classifier>shaded</classifier>
 			<exclusions>
 				<exclusion>
@@ -79,13 +79,29 @@
 			<plugins>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
+					<version>2.5</version>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<inherited>true</inherited>
 					<configuration>
-						<source>1.5</source>
-						<target>1.5</target>
+						<source>1.6</source>
+						<target>1.6</target>
 						<encoding>utf-8</encoding>
 					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<version>2.9</version>
+					<artifactId>maven-surefire-plugin</artifactId>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<version>2.4</version>
+					<artifactId>maven-install-plugin</artifactId>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<version>2.7</version>
+					<artifactId>maven-deploy-plugin</artifactId>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -93,7 +109,7 @@
 			<!-- Disable resources (project has none) -->
 			<plugin>
 				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.5</version>
+				<version>2.6</version>
 				<executions>
 					<execution>
 						<id>default-resources</id>
@@ -161,7 +177,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.4</version>
+				<version>2.4.1</version>
 				<configuration>
 					<descriptor>etc/assembly-all.xml</descriptor>
 				</configuration>
